--- a/app/src/main/res/layout/activity_cv2.xml
+++ b/app/src/main/res/layout/activity_cv2.xml
@@ -1,9 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     tools:context=".cv2">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose"
+        android:id="@+id/check"
+android:layout_centerHorizontal="true"
+        android:textColor="#000"
+        android:textSize="40dp"/>
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/box1"
+        android:layout_below="@+id/check"
+        android:layout_marginLeft="20dp"
+        android:text="  Heartburn"
+        android:layout_marginTop="20dp"/>
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/box2"
+        android:layout_below="@+id/box1"
+        android:layout_marginLeft="20dp"
+        android:text="  Hepatitis B"
+        android:layout_marginTop="20dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/box3"
+        android:layout_below="@+id/box2"
+        android:layout_marginLeft="20dp"
+        android:text="  Diarrhea"
+        android:layout_marginTop="20dp"/>
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/box4"
+        android:layout_below="@+id/box3"
+        android:layout_marginLeft="20dp"
+        android:text="  Gastritis"
+        android:layout_marginTop="20dp"/>
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/box5"
+        android:layout_below="@id/check"
+         android:layout_toRightOf="@+id/box1"
+        android:layout_marginLeft="66dp"
+        android:text="  Heartburn"
+        android:layout_marginTop="20dp"/>
+
+    <CheckBox
+        android:id="@+id/box6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/box5"
+        android:layout_marginLeft="60dp"
+
+android:layout_marginTop="20sp"
+        android:layout_toRightOf="@+id/box2"
+        android:text="  Hepatitis B" />
+
+    <CheckBox
+        android:id="@+id/box7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/box6"
+        android:layout_marginLeft="76dp"
+        android:layout_marginTop="20dp"
+        android:layout_toRightOf="@+id/box3"
+        android:text="  Diarrhea" />
+    <CheckBox
+        android:id="@+id/box8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/box7"
+        android:layout_marginLeft="76dp"
+        android:layout_marginTop="20dp"
+        android:layout_toRightOf="@+id/box4"
+        android:text="  Diarrhea" />
+
+
+</RelativeLayout>
